correct sticky menu overlapping with section

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -7,6 +7,8 @@
 html {
   font-family: "Verdana";
   font-size: 16px;
+  scroll-padding-top: 125px; /* height of sticky header */
+
 }
 
 header,
@@ -140,7 +142,7 @@ footer {
   height: 400px;
   margin-right: 1em;
   margin-left: 1em;
-  background-color: grey;
+  background-color: #dddddd;
 }
 
 /*Service section*/
@@ -159,7 +161,7 @@ footer {
 .services-img {
   width: 500px;
   height: 350px;
-  background-color: grey;
+  background-color: #dddddd;
 }
 
 .services-explanation {
